[package]
name = "luncher"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
dirs = "6.0.0"
fontdue = "0.9.3"
nucleo = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
smithay-client-toolkit = { version = "0.20.0", features = ["calloop"] }
toml = "1.0.6"
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.11", features = ["client"] }
xkbcommon = "0.9.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
debug = false
overflow-checks = false
incremental = false
